--- a/recipes/chickenAlfredo.html
+++ b/recipes/chickenAlfredo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Chicken Alfredo Recipe</title>
+    <link rel="stylesheet" href="recipeStyle.css">
 </head>
 
 <body>
 <h1>Chicken Alfredo</h1>
-<img src ="../images/Chicken-Alfredo.jpg" alt="Chicken Alfredo" height="310" width="400">
+<img src ="../images/Chicken-Alfredo.jpg" alt="Chicken Alfredo" height="310" width="400" class="pic">
 <p>Creamy and delicious Chicken Alfredo pasta</p>
 <ul> Ingredients
     <li>Chicken breast</li>
