--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Webpage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -10,7 +11,7 @@
 <ul>
 <li><a href="recipes/lasagna.html"> Lasagna Recipe</a></li>
 <li><a href="recipes/chickenAlfredo.html"> Chicken Alfredo</a></li>
-<li><a href="recipes/vegetarianPizza.html">Vegetarian-Pizza</a></li>
+<li><a href="recipes/vegetarianPizza.html"> Vegetarian-Pizza</a></li>
 
 </ul>
 </body>
