--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Webpage</title>
+    <link rel="stylesheet" href="recipeStyle.css">
 </head>
 
 <body>
 <h1>Lasagna</h1>
-<img src ="../images/Classic-Lasagna-14-scaled.jpg" alt = "Lasagna" height="310" width="400">
+<img src ="../images/Classic-Lasagna-14-scaled.jpg" alt = "Lasagna" height="310" width="400" class="pic">
 <p>Finished original italian Lasagna</p>
 <ul> Ingredients
     <li>Meat</li>
