--- a/recipes/vegetarianPizza.html
+++ b/recipes/vegetarianPizza.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Vegetarian Pizza Recipe</title>
+    <link rel="stylesheet" href="recipeStyle.css">
 </head>
 
 <body>
 <h1>Vegetarian Pizza</h1>
-<img src ="../images/Vegetarian-Pizza.jpg" alt="Vegetarian Pizza" height="310" width="400">
+<img src ="../images/Vegetarian-Pizza.jpg" alt="Vegetarian Pizza" height="310" width="400" class="pic">
 <p>Delicious homemade Vegetarian Pizza</p>
 <ul> Ingredients
     <li>Pizza dough</li>
